# fastapi-demo

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/core/: exceptions.py  logging.py
app/middleware/: logging.py
app/routes/: analyze_answers.py  eval_image.py  example.py  health.py  main.py
app/schema/: analyze_answers.py  eval_image.py  example.py
docker/: Dockerfile  docker-entrypoint.sh
scripts/: build_docker.sh  run_docker.sh  run_docker_local.sh  setup_dev_env.sh
src/: config.py  main.py
src/core/: config.py  logging.py  response.py
src/middleware/: logging.py
src/routes/: analyze_answers.py  eval_image.py  example.py  health.py  main.py
src/schema/: analyze_answers.py  eval_image.py  example.py
tests/: test_example.py
