[project]
name = "fastapi-demo"
version = "0.1.0"
description = "fastapi的基础模板项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.38.0",
]
